# ForexPilot

./: .replit  main.py  pyproject.toml  replit.md  trading_performance.json
.local/state/replit/agent/: .latest.json
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted--ForexPilot-Master-Prompt-5-15-Minute-Intraday-Edition--1758916879419_1758916879420.txt  Pasted-Enhance-my-existing-Forex-trading-system-with-these-specific-upgrades-PRIORITY-UPGRADES-TO-IM-1758713549596_1758713549597.txt
static/css/: dashboard.css
templates/: backtest_dashboard.html  dashboard.html
trading/: __init__.py  backtester.py  data_fetcher.py  ensemble_analyzer.py  performance_tracker.py  risk_manager.py
