[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "ta-lib>=0.6.7",
    "yfinance>=0.2.66",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.3.0",
]
